--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.1.0",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.1",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
